third_party/move/move-compiler/tests/move_check/typing/uninferred_type_unpack_decl.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_unpack_decl.move:5:13
  │
5 │         let S{};
  │             ^^^ Cannot infer the type parameter `T` for generic struct `0x8675309::M::S`. Try providing a type parameter.

